--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
 	},
 	"homepage": "https://github.com/DevGabrielDeSouza/tdd-challenge#readme",
 	"devDependencies": {
+		"@cypress/code-coverage": "^3.9.7",
 		"cypress": "^7.5.0",
-		"cypress-cucumber-preprocessor": "^4.1.2"
+		"cypress-cucumber-preprocessor": "^4.1.2",
+		"nyc": "^15.1.0"
 	},
 	"cypress-cucumber-preprocessor": {
 		"nonGlobalStepDefinitions": true
